<resources>
    <!-- Название приложения -->
    <string name="app_name" translatable="false">Playlist maker</string>
    <!-- Пункты главного меню -->
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <!-- Пункты меню настроек -->
    <string name="dark_theme">Темная тема</string>
    <string name="share_invitation">Поделиться приложением</string>
    <string name="connect_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="support_email" translatable="false">awesome\.ejilonok\@yandex\.ru</string>
    <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_link" translatable="false">https:////yandex.ru/legal/practicum_offer/</string>
    <string name="clear">очистить</string>
    <string name="shared_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <!-- Сообщения пользователю в окне поиска -->
    <string name="no_tracks">Ничего не нашлось</string>
    <string name="server_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="history_clear">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_preview_time" translatable="false">00:00</string>
    <!-- Окно медиатеки -->
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlist_list">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <!-- Плейлисты -->
    <string name="playlists">Плейлисты</string>
    <string name="playlist_title_hint">Название*</string>
    <string name="playlist_descr">Описание</string>
    <string name="create">Создать</string>
</resources>
