<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SecondaryLayout"
    tools:context=".settings.ui.SettingsFragment">

    <TextView
        style="@style/OtherSecondaryTitle"
        android:text="@string/settings"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        style="@style/SettingsButton"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="start|center"
        android:text="@string/dark_theme"
        app:thumbTint="?attr/colorControlHighlight"
        app:trackTint="?attr/colorControlNormal" />

    <com.google.android.material.button.MaterialButton
        style="@style/SettingsButton"
        android:id="@+id/share_button"
        android:text="@string/share_invitation"
        app:icon="@drawable/share"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/SettingsButton"
        android:id="@+id/support_button"
        android:text="@string/connect_to_support"
        app:icon="@drawable/support"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/SettingsButton"
        android:id="@+id/terms_of_use_button"
        android:text="@string/terms_of_use"
        app:icon="@drawable/arrow_forward"
        />

</LinearLayout>
