<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SecondaryLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SecondaryLayoutTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SettingsTitle"
            android:text="@string/settings"/>
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        style="@style/SettingsButton"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="start|center"
        android:text="@string/dark_theme"
        app:thumbTint="?attr/colorControlHighlight"
        app:trackTint="?attr/colorControlNormal" />

    <com.google.android.material.button.MaterialButton
        style="@style/SettingsButton"
        android:id="@+id/share_app"
        android:text="@string/share_invitation"
        app:icon="@drawable/share"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/SettingsButton"
        android:id="@+id/support"
        android:text="@string/connect_to_support"
        app:icon="@drawable/support"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/SettingsButton"
        android:id="@+id/terms_of_use"
        android:text="@string/terms_of_use"
        app:icon="@drawable/arrow_forward"
        />

    <LinearLayout
        android:id="@+id/empty_space"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">
        <com.google.android.material.button.MaterialButton
            style="@style/SettingsTabButton"
            android:id="@+id/settings_search_button"
            android:text="@string/search"
            app:icon="@drawable/search"/>
        <com.google.android.material.button.MaterialButton
            style="@style/SettingsTabButton"
            android:id="@+id/settings_library_button"
            android:text="@string/library"
            app:icon="@drawable/library"/>
        <com.google.android.material.button.MaterialButton
            style="@style/SettingsTabButton"
            android:text="@string/settings"
            app:icon="@drawable/settings"
            app:iconTint="@color/YP_Blue"
            android:textColor="@color/YP_Blue"/>
    </LinearLayout>

</LinearLayout>