<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/main_padding"
    android:paddingRight="@dimen/main_padding"
    android:paddingBottom="28dp"
    android:orientation="vertical"
    android:background="@color/YP_Blue"
    >

    <TextView
        style="@style/MainTitleStyle"
        android:text="@string/app_name"
        />


    <com.google.android.material.button.MaterialButton
        style="@style/MainButtonStyle"
        android:id="@+id/search_button"
        app:icon="@drawable/search"
        android:text="@string/search"
        />


    <com.google.android.material.button.MaterialButton
        style="@style/MainButtonStyle"
        android:id="@+id/library_button"
        app:icon="@drawable/library"
        app:iconSize="20dp"
        android:text="@string/library"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/MainButtonStyle"
        android:id="@+id/settings_button"
        app:icon="@drawable/settings"
        android:text="@string/settings"
        />
</LinearLayout>