<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SecondaryLayout"
    tools:context=".search.ui.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SecondaryLayout">

        <TextView
            style="@style/OtherSecondaryTitle"
            android:text="@string/search"
            android:paddingStart="@dimen/main_padding"
            android:paddingEnd="@dimen/main_padding"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            style="@style/SearchLineFrame">

            <ImageView
                style="@style/SearchLineIcon"
                android:src="@drawable/search"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="@string/search"/>

            <EditText
                android:id="@+id/search_line"
                style="@style/SearchEditText"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:singleLine="true"
                />


            <ImageView
                android:id="@+id/clear_button"
                style="@style/SearchLineIcon"
                android:src="@drawable/clear"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/clear"
                android:visibility="gone"
                />

        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/search_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TrackErrorStyle"
        android:drawableTop="@drawable/error_smile"
        android:text="@string/no_tracks"
         />
    <TextView
        android:id="@+id/server_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TrackErrorStyle"
        android:drawableTop="@drawable/server_error"
        android:text="@string/server_error"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        style="@style/ButtonOnSecondary"
        android:text="@string/update"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/history_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/HistoryTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_title"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_history_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            style="@style/ButtonOnSecondary"
            android:layout_marginTop="24dp"
            android:text="@string/history_clear"/>
    </LinearLayout>

    <ProgressBar android:id="@+id/search_progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_marginTop="@dimen/progress_bar_margin"
        android:layout_gravity="center"
        android:indeterminateTint="@color/YP_Blue"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_track_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/main_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
</LinearLayout>
