<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SecondaryLayout"
    android:paddingEnd="@dimen/main_padding"
    android:paddingStart="@dimen/main_padding">

    <ImageView
        android:id="@+id/playlist_back_button"
        style="@style/BackIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        style="@style/OtherSecondaryTitle"
        android:layout_width="wrap_content"
        android:text="@string/new_playlist"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/playlist_back_button"/>

    <ImageView
        android:id="@+id/new_playlist_cover"
        android:layout_width="312dp"
        android:layout_height="312dp"
        app:layout_constraintTop_toBottomOf="@id/playlist_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="42dp"
        tools:src="@drawable/playlist_cover_placeholder"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_title_TextInputLayout"
        android:layout_width="match_parent"
        style="@style/NewPlaylistEdit"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_title_hint"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text = "Sadkjfhadkjfh"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_descr_TextInputLayout"
        android:layout_width="match_parent"
        style="@style/NewPlaylistEdit"
        android:hint="@string/playlist_descr"
        app:layout_constraintTop_toBottomOf="@id/playlist_title_TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_descr_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="jhhghg"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        style="@style/PlaylistButton"
        android:text="@string/create"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>