<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SecondaryLayout"
    android:paddingTop="@dimen/main_padding"
    android:paddingEnd="0dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/main_padding">

<ImageView
    android:id="@+id/player_back_button"
    style="@style/BackIcon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="@id/start_guide"
    />

<ImageView
    android:id="@+id/player_track_cover"
    android:layout_width="312dp"
    android:layout_height="312dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="66dp"
    tools:src="@drawable/cover_placeholder"
    />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/start_guide"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintGuide_begin="8dp"
    android:orientation="vertical"/>


<androidx.constraintlayout.widget.Guideline
    android:id="@+id/end_guide"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:layout_constraintGuide_end="8dp"
    android:orientation="vertical"/>


<TextView
    android:id="@+id/player_track_name"
    style="@style/PlayerTrackNameStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/start_guide"
    app:layout_constraintEnd_toEndOf="@id/end_guide"
    app:layout_constraintTop_toBottomOf="@id/player_track_cover"
    android:gravity="start"
    android:singleLine="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:ellipsize="marquee"
    android:marqueeRepeatLimit="marquee_forever"
    android:scrollHorizontally="true"
    tools:text="[Track Name]" />

<TextView
    android:id="@+id/player_artist_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="30dp"
    app:layout_constraintStart_toStartOf="@id/player_track_name"
    app:layout_constraintEnd_toEndOf="@id/player_track_name"
    app:layout_constraintTop_toBottomOf="@id/player_track_name"
    android:gravity="start"
    android:singleLine="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:ellipsize="marquee"
    android:marqueeRepeatLimit="marquee_forever"
    android:scrollHorizontally="true"
    tools:text="[Artist Name]" />

<ImageView
    android:id="@+id/add_to_pl_button"
    android:layout_width="@dimen/player_small_button"
    android:layout_height="@dimen/player_small_button"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintStart_toStartOf="@id/start_guide"
    app:layout_constraintTop_toTopOf="@id/play_button"
    app:layout_constraintBottom_toBottomOf="@id/play_button"
    android:src="@drawable/add_pl_button"/>

<ImageView
    android:id="@+id/play_button"
    android:layout_width="@dimen/player_big_button"
    android:layout_height="@dimen/player_big_button"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintStart_toStartOf="@id/add_to_pl_button"
    app:layout_constraintEnd_toEndOf="@id/like_button"
    app:layout_constraintTop_toBottomOf="@id/player_artist_name"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="4dp"
    android:src="@drawable/play_button"/>


<ImageView
    android:id="@+id/like_button"
    android:layout_width="@dimen/player_small_button"
    android:layout_height="@dimen/player_small_button"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintEnd_toEndOf="@id/end_guide"
    app:layout_constraintTop_toTopOf="@id/play_button"
    app:layout_constraintBottom_toBottomOf="@id/play_button"
    android:src="@drawable/like_button"/>

<TextView
    android:id="@+id/current_time_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/play_button"
    app:layout_constraintStart_toStartOf="@id/start_guide"
    app:layout_constraintEnd_toEndOf="@id/end_guide"
    android:text="@string/default_preview_time"
    android:layout_marginTop="4dp"
    android:textColor="?attr/colorOnSecondary"
    />

<TextView
    android:id="@+id/track_time_label"
    style="@style/PlayerLabelStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/track_time"
    android:layout_marginTop="39dp"
    app:layout_constraintTop_toBottomOf="@id/current_time_tv"
    app:layout_constraintStart_toStartOf="parent"/>

<TextView
    android:id="@+id/collection_name_label"
    style="@style/PlayerLabelStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTag="collection_name_label"
    android:text="@string/collection_name"
    app:layout_constraintTop_toBottomOf="@id/track_time_label"
    app:layout_constraintStart_toStartOf="parent"/>

<TextView
    android:id="@+id/year_label"
    style="@style/PlayerLabelStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTag="year_label"
    android:text="@string/year"
    app:layout_constraintTop_toBottomOf="@id/collection_name_label"
    app:layout_constraintStart_toStartOf="parent"/>

<TextView
    android:id="@+id/genre_label"
    style="@style/PlayerLabelStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTag="genre_label"
    android:text="@string/genre"
    app:layout_constraintTop_toBottomOf="@id/year_label"
    app:layout_constraintStart_toStartOf="parent"/>

<TextView
    android:id="@+id/country_label"
    style="@style/PlayerLabelStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTag="country_label"
    app:layout_constraintTop_toBottomOf="@id/genre_label"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginBottom="@dimen/main_padding"
    android:text="@string/country"/>

<TextView
    android:id="@+id/player_track_time_tv"
    style="@style/PlayerAttributeStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintBaseline_toBaselineOf="@id/track_time_label"
    app:layout_constraintStart_toEndOf="@id/track_time_label"
    tools:text="[1:51]" />

<TextView
    android:id="@+id/player_collection_name_tv"
    style="@style/PlayerAttributeStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTag="player_collection_name_tv"
    app:layout_constraintBaseline_toBaselineOf="@id/collection_name_label"
    app:layout_constraintStart_toEndOf="@id/collection_name_label"
    android:singleLine="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:ellipsize="marquee"
    android:marqueeRepeatLimit="marquee_forever"
    android:scrollHorizontally="true"
    tools:text="[Collection Name]"
    />

<TextView
    android:id="@+id/player_year_tv"
    style="@style/PlayerAttributeStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTag="player_year_tv"
    app:layout_constraintBaseline_toBaselineOf="@id/year_label"
    app:layout_constraintStart_toEndOf="@id/year_label"
    tools:text="[Year]"/>

<TextView
    android:id="@+id/player_genre_tv"
    style="@style/PlayerAttributeStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTag="player_genre_tv"
    app:layout_constraintBaseline_toBaselineOf="@id/genre_label"
    app:layout_constraintStart_toEndOf="@id/genre_label"
    tools:text="[Genre]"/>

<TextView
    android:id="@+id/player_country_tv"
    style="@style/PlayerAttributeStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTag="player_country_tv"
    app:layout_constraintBaseline_toBaselineOf="@id/country_label"
    app:layout_constraintStart_toEndOf="@id/country_label"
    tools:text="[Country]"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/collection_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_tags="collection_name_label, player_collection_name_tv"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/year_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="year_label, player_year_tv"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/genre_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_tags="genre_label, player_genre_tv"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/country_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_tags="country_label, player_country_tv"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
